--- a/popup.html
+++ b/popup.html
@@ -7,34 +7,31 @@
   </head>
   <body>
     <div class="container mt-2">
-      <h4>Crypto Wallets</h3>
+      <h4>Crypto Wallets</h4>
 
       <a href="#" id="newWalletBtn">New wallet +</a>
 
       <div id="newWallet" class="mt-2" style="display: none;">
           <div class="form-group">
-            <label for="">New wallet address</label>
+            <label>New wallet address</label>
             <input type="text" class="form-control" id="newWalletAddress">
           </div>
 
           <div class="form-group mt-2">
-            <label for="">Network</label>
+            <label>Network</label>
             <select name="coinSelect" id="newCoinSelect">
               <option value="ETH">ETH</option>
             </select>
           </div>
           <button class="btn btn-primary mt-2" id="saveNewWalletBtn" type="button">Save</button>
       </div>
-      
       <div class="wallets">
         <hr>
         <h4>Wallets</h4>
-        
       </div>
     </div>
 
     <script src="lib/jquery.js"></script>
     <script src="popup.js"></script>
-
   </body>
 </html>
